--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@lottiefiles/react-lottie-player": "^3.6.0",
+    "axios": "^1.8.2",
     "chart.js": "^4.4.0",
     "chartjs-plugin-annotation": "^3.0.1",
     "chartjs-plugin-zoom": "^2.0.1",
@@ -22,8 +23,10 @@
     "lottie-react": "^2.4.1",
     "next": "15.0.2",
     "prop-types": "^15.8.1",
+    "rc-slider": "^11.1.8",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
