--- a/client/package.json
+++ b/client/package.json
@@ -9,24 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.2.0",
-    "@lottiefiles/react-lottie-player": "^3.6.0",
     "axios": "^1.8.2",
-    "chart.js": "^4.4.0",
-    "chartjs-plugin-annotation": "^3.0.1",
-    "chartjs-plugin-zoom": "^2.0.1",
-    "cls": "^0.1.5",
     "clsx": "^2.1.1",
-    "katex": "^0.16.21",
-    "lodash": "^4.17.21",
+    "framer-motion": "^12.5.0",
     "lottie-react": "^2.4.1",
     "next": "15.0.2",
     "prop-types": "^15.8.1",
-    "rc-slider": "^11.1.8",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-datepicker": "^8.1.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
