--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "next": "15.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.15.2"
   },
   "devDependencies": {
     "postcss": "^8",
